# warehouse_ros_mongo

./: .ci.before_script  .ci.clang_tidy  .ci.prepare_codecov  .gitignore  .pre-commit-config.yaml  .travis.before_script  .travis.yml  CHANGELOG.rst  CMakeLists.txt  ConfigExtras.cmake  README.md  mongo_database_connection_plugin_description.xml  package.xml  rosinstall  warehouse_ros_mongo.repos
.github/workflows/: format.yml  industrial_ci_action.yml  prerelease.yml
cmake/: FindMONGODB.cmake
include/warehouse_ros_mongo/: config.h.in  database_connection.h  message_collection.h  metadata.h  query_results.h
scripts/: mongo_wrapper_ros.py
src/: database_connection.cpp  message_collection.cpp  mongo_wrapper_ros.py  query_results.cpp  warehouse_ros_mongo_dummy.cpp
test/: test_mongo_helpers.h  test_warehouse_ros_mongo.cpp  warehouse_ros_mongo.launch.py  warehouse_ros_mongo.test
warehouse_ros_mongo/: mongo_wrapper_ros.py
