<package format="2">
  <name>warehouse_ros_mongo</name>
  <version>0.10.0</version>
  <description>
    Implementation of warehouse_ros for MongoDB
  </description>
  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <author email="cbrew@fetchrobotics.com">Connor Brew</author>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libmongoclient-dev</build_depend>

  <depend>warehouse_ros</depend>
  <depend>roscpp</depend>
  <depend>rostime</depend>
  <depend>std_msgs</depend>
  <depend>class_loader</depend>

  <test_depend>rostest</test_depend>
  <test_depend>mongodb</test_depend>

  <export>
    <warehouse_ros plugin="${prefix}/mongo_database_connection_plugin_description.xml"/>
  </export>
</package>
