<package format="2">
  <name>warehouse_ros_mongo</name>
  <version>2.0.0</version>
  <description>
    Implementation of warehouse_ros for MongoDB
  </description>
  <author email="bhaskara@willowgarage.com">Bhaskara Marthi</author>
  <author email="cbrew@fetchrobotics.com">Connor Brew</author>
  <maintainer email="moveit_releasers@googlegroups.com">MoveIt Release Team</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/warehouse_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>libmongoclient-dev</build_depend>

  <depend>mongodb</depend>
  <depend>warehouse_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>class_loader</depend>
  <depend>rclpy</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <warehouse_ros plugin="${prefix}/mongo_database_connection_plugin_description.xml"/>
  </export>
</package>
